2009-09-17 Jerome Pasquier  <rainbru@free.fr>
	* common/version.cpp (logVersion): Now log build date and time.
	* common/version.h : Added buildDate and buildTime class members.

2009-09-12 Jerome Pasquier  <rainbru@free.fr>
	* maincore/Makefile.am (dll): Changed -lintl flag (was -lintl.dll).
	
2009-08-30 Jerome Pasquier  <rainbru@free.fr>
	* common/globaluri.cpp (homeSetup): Make this function works
	on Win32 platform. getenv must retrieve HOME for GNU/Linux and
	UserProfile for WIN32.

	* common/globaluri.cpp : added logger calls to solve
	a cross-compil issue.

2009-08-28 Jerome Pasquier  <rainbru@free.fr>
	* maincore/Makefile.am : added dumpogreobject.h/cpp.
	
2009-08-06 Jerome Pasquier  <rainbru@free.fr>
	* common/rainbrudef.h : Now handles HAVE_GETEXT from config.h
	with conditionnal compilation of I18N stuff.

2009-05-10 Jerome Pasquier  <rainbru@free.fr>
	* common/optionlistattribute.cpp : Added caption to the 
	constructor.
	* common/optionboolattribute.cpp : Added caption to the 
	constructor.
	* common/optionstringattribute.cpp : Added caption to the 
	constructor.

2009-05-29 Jerome Pasquier  <rainbru@free.fr>
	* common/optionintrangeattribute.cpp : Added caption to the 
	constructor.
	* common/optionintattribute.cpp : Added caption to the constructor.
	* common/optionfloatrangeattribute.cpp : Added caption to the 
	constructor.
	* common/optionfloatattribute.cpp : Added caption to the constructor.

	* common/xmloptions.cpp : Now uses panel and button name instead
	of caption.

	* client/launcheroptions.cpp : Now uses attributes caption for
	drawing.
	
	* common/optionpanel.h : Added the name member to
	separate name (identifier) ans caption (translated).

	* common/optionbutton.h : Added the name member to
	separate name (identifier) ans caption (translated).

	* common/optionattribute.h : Added the caption member to
	separate name (identifier) ans caption (translated).
	
2009-05-28 Jerome Pasquier  <rainbru@free.fr>