@@ -49,7 +49,7 @@ by the Foundation.
 
 @page
 @vskip 0pt plus 1filll
-Copyright @copyright{} 2006-2008 J@'er@^ome PASQUIER
+Copyright @copyright{} 2006-2009 J@'er@^ome PASQUIER
 
 Permission is granted to make and distribute verbatim copies of
 this manual provided the copyright notice and this permission notice
@@ -71,7 +71,8 @@ by the Foundation.
 @node Top, Instructions, (dir), (dir)
 
 @ifinfo
-This file documents the @command{RainbruRPG} command to RainbruRPG is a in-development Multiplayer Online Role-Playing Game.
+This file documents the @command{RainbruRPG} command, the client of an 
+in-development Multiplayer Online Role-Playing Game.
 @end ifinfo
 
 @c All the menus can be updated with the EMACS command
