@@ -24,6 +24,7 @@
   * Declares a base widget that can contain childs
   *
   * Modifications :
+  * - 15 oct 2009 : Made messages transatable with gettext
   * - 19 aug 2008 : Single file documentation
   * - 15 feb 2008 : starting implementation
   *         
@@ -32,15 +33,16 @@
 #ifndef _OGRE_GUI_CONTAINER_H_
 #define _OGRE_GUI_CONTAINER_H_
 
+#include <OgreVector4.h>
+#include <vector>
+#include <rainbrudef.h>    // For the GNU gettext stuff
+
 #include "widget.h"
 #include "bggui.h"         // For enum OgreGUIWindowType
 #include "bgtextinput.h"
 #include "mousepointer.h"
 #include "mouseevent.h"
 
-
-#include <OgreVector4.h>
-#include <vector>
 
 // Forward declarations
 namespace BetaGUI{
